tests/Core/positive/test055.jvc
-- eta-expansion of polymorphic constructors

type Box {
    box : Π T : Type, Π A : T, A → A → Box A;
};

def f : Box Int → Int := \(x : Box Int) case x of { box _ _ a b := b - a };
def g : (Int → Int → Box Int) → Box Int := \(f : Int → Int → Box Int) f 2 3;

f (g (box Type Int))
