tests/Core/negative/parsing/test022.jvc
type Unit {
  unit : Unit;
};

type Box {
  box : Any -> Box;
};

def f := \x
  match x with {
    box box := 0;
  };
